[gd_scene load_steps=138 format=3 uid="uid://doye1ssaau1bx"]

[ext_resource type="Script" path="res://scripts/bubble.gd" id="1_qk08l"]
[ext_resource type="Texture2D" uid="uid://bq2yfkbh2ciuy" path="res://assets/bubble_blow.png" id="2_aqaw8"]
[ext_resource type="Texture2D" uid="uid://bl041af21jmn8" path="res://assets/bubble_idle.png" id="2_estqp"]
[ext_resource type="Texture2D" uid="uid://du48lqjhcaj6w" path="res://assets/death_animation.png" id="4_12831"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p12yt"]
atlas = ExtResource("2_aqaw8")
region = Rect2(0, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqbfm"]
atlas = ExtResource("2_aqaw8")
region = Rect2(36, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_41cjt"]
atlas = ExtResource("2_aqaw8")
region = Rect2(72, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmdsh"]
atlas = ExtResource("2_aqaw8")
region = Rect2(108, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ndxk"]
atlas = ExtResource("2_aqaw8")
region = Rect2(144, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpkep"]
atlas = ExtResource("2_aqaw8")
region = Rect2(180, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gltvl"]
atlas = ExtResource("2_aqaw8")
region = Rect2(216, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0j4s"]
atlas = ExtResource("2_aqaw8")
region = Rect2(252, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj3lg"]
atlas = ExtResource("2_aqaw8")
region = Rect2(288, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eocf"]
atlas = ExtResource("2_aqaw8")
region = Rect2(324, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2003a"]
atlas = ExtResource("2_aqaw8")
region = Rect2(360, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbpm7"]
atlas = ExtResource("2_aqaw8")
region = Rect2(396, 36, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_nmprm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p12yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqbfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41cjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmdsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ndxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpkep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gltvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0j4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj3lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eocf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2003a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbpm7")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5mnwm"]
atlas = ExtResource("2_aqaw8")
region = Rect2(0, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_awqkh"]
atlas = ExtResource("2_aqaw8")
region = Rect2(36, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfw1t"]
atlas = ExtResource("2_aqaw8")
region = Rect2(72, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv0ev"]
atlas = ExtResource("2_aqaw8")
region = Rect2(108, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f3e2"]
atlas = ExtResource("2_aqaw8")
region = Rect2(144, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl4e2"]
atlas = ExtResource("2_aqaw8")
region = Rect2(180, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ica3l"]
atlas = ExtResource("2_aqaw8")
region = Rect2(216, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsuyi"]
atlas = ExtResource("2_aqaw8")
region = Rect2(252, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfok6"]
atlas = ExtResource("2_aqaw8")
region = Rect2(288, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw658"]
atlas = ExtResource("2_aqaw8")
region = Rect2(324, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b3cy"]
atlas = ExtResource("2_aqaw8")
region = Rect2(360, 108, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ggka"]
atlas = ExtResource("2_aqaw8")
region = Rect2(396, 108, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_j70jq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mnwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awqkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfw1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv0ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f3e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl4e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ica3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsuyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfok6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw658")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b3cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ggka")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xj3pn"]
atlas = ExtResource("2_aqaw8")
region = Rect2(0, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gicmg"]
atlas = ExtResource("2_aqaw8")
region = Rect2(36, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfd56"]
atlas = ExtResource("2_aqaw8")
region = Rect2(72, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri7k7"]
atlas = ExtResource("2_aqaw8")
region = Rect2(108, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpgh0"]
atlas = ExtResource("2_aqaw8")
region = Rect2(144, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hipa5"]
atlas = ExtResource("2_aqaw8")
region = Rect2(180, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_anymd"]
atlas = ExtResource("2_aqaw8")
region = Rect2(216, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu7lx"]
atlas = ExtResource("2_aqaw8")
region = Rect2(252, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cim2"]
atlas = ExtResource("2_aqaw8")
region = Rect2(288, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6el4"]
atlas = ExtResource("2_aqaw8")
region = Rect2(324, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2ifg"]
atlas = ExtResource("2_aqaw8")
region = Rect2(360, 180, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fut3j"]
atlas = ExtResource("2_aqaw8")
region = Rect2(396, 180, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_qdoif"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj3pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gicmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfd56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri7k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpgh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hipa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anymd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu7lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cim2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6el4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2ifg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fut3j")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mwpgj"]
atlas = ExtResource("2_aqaw8")
region = Rect2(0, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe076"]
atlas = ExtResource("2_aqaw8")
region = Rect2(36, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_12yve"]
atlas = ExtResource("2_aqaw8")
region = Rect2(72, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x4xr"]
atlas = ExtResource("2_aqaw8")
region = Rect2(108, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jeit"]
atlas = ExtResource("2_aqaw8")
region = Rect2(144, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxopi"]
atlas = ExtResource("2_aqaw8")
region = Rect2(180, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh4fy"]
atlas = ExtResource("2_aqaw8")
region = Rect2(216, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gemvr"]
atlas = ExtResource("2_aqaw8")
region = Rect2(252, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_x65b4"]
atlas = ExtResource("2_aqaw8")
region = Rect2(288, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_na361"]
atlas = ExtResource("2_aqaw8")
region = Rect2(324, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bhjr"]
atlas = ExtResource("2_aqaw8")
region = Rect2(360, 252, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8ahj"]
atlas = ExtResource("2_aqaw8")
region = Rect2(396, 252, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_orqri"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwpgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe076")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12yve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x4xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jeit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxopi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh4fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gemvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x65b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na361")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bhjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8ahj")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pcjww"]
atlas = ExtResource("2_aqaw8")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggtfx"]
atlas = ExtResource("2_aqaw8")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_duftt"]
atlas = ExtResource("2_aqaw8")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_n24xy"]
atlas = ExtResource("2_aqaw8")
region = Rect2(108, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_huu6v"]
atlas = ExtResource("2_aqaw8")
region = Rect2(144, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fols"]
atlas = ExtResource("2_aqaw8")
region = Rect2(180, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0jkm"]
atlas = ExtResource("2_aqaw8")
region = Rect2(216, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_f154m"]
atlas = ExtResource("2_aqaw8")
region = Rect2(252, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_5swcg"]
atlas = ExtResource("2_aqaw8")
region = Rect2(288, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhj4a"]
atlas = ExtResource("2_aqaw8")
region = Rect2(324, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4trer"]
atlas = ExtResource("2_aqaw8")
region = Rect2(360, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw26v"]
atlas = ExtResource("2_aqaw8")
region = Rect2(396, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_mud3h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcjww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggtfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duftt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n24xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huu6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fols")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0jkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f154m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5swcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhj4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4trer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw26v")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_umtim"]
atlas = ExtResource("2_aqaw8")
region = Rect2(0, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pfqw"]
atlas = ExtResource("2_aqaw8")
region = Rect2(36, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydfxo"]
atlas = ExtResource("2_aqaw8")
region = Rect2(72, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2iaf"]
atlas = ExtResource("2_aqaw8")
region = Rect2(108, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tgqg"]
atlas = ExtResource("2_aqaw8")
region = Rect2(144, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilt25"]
atlas = ExtResource("2_aqaw8")
region = Rect2(180, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6hnb"]
atlas = ExtResource("2_aqaw8")
region = Rect2(216, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ub3w"]
atlas = ExtResource("2_aqaw8")
region = Rect2(252, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_473sm"]
atlas = ExtResource("2_aqaw8")
region = Rect2(288, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_07hjr"]
atlas = ExtResource("2_aqaw8")
region = Rect2(324, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_eodb0"]
atlas = ExtResource("2_aqaw8")
region = Rect2(360, 144, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljo4m"]
atlas = ExtResource("2_aqaw8")
region = Rect2(396, 144, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_esglm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umtim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pfqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydfxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2iaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tgqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilt25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6hnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ub3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_473sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07hjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eodb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljo4m")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jq8g4"]
atlas = ExtResource("2_aqaw8")
region = Rect2(0, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eidl"]
atlas = ExtResource("2_aqaw8")
region = Rect2(36, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxo7g"]
atlas = ExtResource("2_aqaw8")
region = Rect2(72, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5840"]
atlas = ExtResource("2_aqaw8")
region = Rect2(108, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gqkw"]
atlas = ExtResource("2_aqaw8")
region = Rect2(144, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkv8p"]
atlas = ExtResource("2_aqaw8")
region = Rect2(180, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uuuu"]
atlas = ExtResource("2_aqaw8")
region = Rect2(216, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm7cl"]
atlas = ExtResource("2_aqaw8")
region = Rect2(252, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivvsn"]
atlas = ExtResource("2_aqaw8")
region = Rect2(288, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gu0m"]
atlas = ExtResource("2_aqaw8")
region = Rect2(324, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_50y0s"]
atlas = ExtResource("2_aqaw8")
region = Rect2(360, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmkk7"]
atlas = ExtResource("2_aqaw8")
region = Rect2(396, 72, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_ytu58"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq8g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eidl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxo7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5840")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gqkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkv8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uuuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm7cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivvsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gu0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50y0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmkk7")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ybujo"]
atlas = ExtResource("2_aqaw8")
region = Rect2(0, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnnsn"]
atlas = ExtResource("2_aqaw8")
region = Rect2(36, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t7q2"]
atlas = ExtResource("2_aqaw8")
region = Rect2(72, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1i51"]
atlas = ExtResource("2_aqaw8")
region = Rect2(108, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3h4v"]
atlas = ExtResource("2_aqaw8")
region = Rect2(144, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_so14y"]
atlas = ExtResource("2_aqaw8")
region = Rect2(180, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0g7a"]
atlas = ExtResource("2_aqaw8")
region = Rect2(216, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu6gu"]
atlas = ExtResource("2_aqaw8")
region = Rect2(252, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cong"]
atlas = ExtResource("2_aqaw8")
region = Rect2(288, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7rrd"]
atlas = ExtResource("2_aqaw8")
region = Rect2(324, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq05a"]
atlas = ExtResource("2_aqaw8")
region = Rect2(360, 216, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohsf5"]
atlas = ExtResource("2_aqaw8")
region = Rect2(396, 216, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_sjwtv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybujo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnnsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t7q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1i51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3h4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so14y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0g7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu6gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cong")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7rrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq05a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohsf5")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_swv7d"]
atlas = ExtResource("2_estqp")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_kei4d"]
atlas = ExtResource("2_estqp")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s3rh"]
atlas = ExtResource("2_estqp")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_aegwf"]
atlas = ExtResource("2_estqp")
region = Rect2(108, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gei7y"]
atlas = ExtResource("2_estqp")
region = Rect2(144, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv6ye"]
atlas = ExtResource("2_estqp")
region = Rect2(180, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xitfu"]
atlas = ExtResource("2_estqp")
region = Rect2(216, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf6tp"]
atlas = ExtResource("2_estqp")
region = Rect2(252, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bhjp"]
atlas = ExtResource("2_estqp")
region = Rect2(288, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_0idbm"]
atlas = ExtResource("2_estqp")
region = Rect2(324, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej7ku"]
atlas = ExtResource("2_estqp")
region = Rect2(360, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3po1"]
atlas = ExtResource("2_estqp")
region = Rect2(396, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_yfa4a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swv7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kei4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s3rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aegwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gei7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv6ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xitfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf6tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bhjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0idbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej7ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3po1")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lbjby"]
radius = 13.0384

[sub_resource type="AtlasTexture" id="AtlasTexture_0u6qb"]
atlas = ExtResource("4_12831")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbn3w"]
atlas = ExtResource("4_12831")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uap62"]
atlas = ExtResource("4_12831")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_we1k3"]
atlas = ExtResource("4_12831")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ticl8"]
atlas = ExtResource("4_12831")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrgxe"]
atlas = ExtResource("4_12831")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruspo"]
atlas = ExtResource("4_12831")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_alxkf"]
atlas = ExtResource("4_12831")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_77cdg"]
atlas = ExtResource("4_12831")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjexv"]
atlas = ExtResource("4_12831")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3lfc"]
atlas = ExtResource("4_12831")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mqfg"]
atlas = ExtResource("4_12831")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5og4"]
atlas = ExtResource("4_12831")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvpgx"]
atlas = ExtResource("4_12831")
region = Rect2(624, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_v312h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u6qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbn3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uap62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we1k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ticl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrgxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruspo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alxkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77cdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjexv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3lfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mqfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5og4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvpgx")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="Bubble" type="CharacterBody2D"]
script = ExtResource("1_qk08l")

[node name="LeftCorner" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_nmprm")
autoplay = "default"

[node name="RightCorner" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_j70jq")
autoplay = "default"

[node name="DownRightCorner" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_qdoif")
autoplay = "default"

[node name="DownLeftCorner" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_orqri")
autoplay = "default"

[node name="Left" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_mud3h")
autoplay = "default"

[node name="Right" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_esglm")
autoplay = "default"

[node name="Up" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_ytu58")
autoplay = "default"

[node name="Down" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_sjwtv")
autoplay = "default"

[node name="Idle" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_yfa4a")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lbjby")

[node name="CurrentAnimation" type="AnimatedSprite2D" parent="."]

[node name="DeathAnimation" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_v312h")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_lbjby")

[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_death_animation_animation_finished"]
[connection signal="animation_looped" from="DeathAnimation" to="." method="_on_death_animation_animation_looped"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
